# tools

./: .gitignore  README.md
ahk.scripts/: gui-msgbox.ahk  scribble.ahk
random_scripts/: markdown.py
web_automation/: main.py
webscraping/scrapy/: pyproject.toml  using_request_html.py
webscraping/scrapy/scrape_one_mg/: scrapy.cfg
webscraping/scrapy/scrape_one_mg/output/: DrugInfoItem.jsonl  DrugSummaryItem.jsonl
webscraping/scrapy/scrape_one_mg/scrape_one_mg/: extractors.py  items.py  middlewares.py  pipelines.py  settings.py
webscraping/scrapy/scrape_one_mg/scrape_one_mg/spiders/: drug_index.py  drugs.py  single_drug.py
youtube_downloader/: main.py  pyproject.toml  rough.ipynb
